--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ nav{
   background-color: #202123;
   height: 100%;
   position: relative;
+  left: 0;
 }
 
 #createImage{
@@ -227,6 +228,20 @@ nav{
   display: none;
 }
 
+.imageContainer{
+  display: flex;
+  justify-content: space-between;
+}
+
+.downloadBtn, .copyBtn{
+  position: absolute;
+  right: 30px;
+  /* background-color: #343541; */
+  cursor: pointer;
+  padding: 5px 7px;
+  border-radius: 50%;
+}
+
 @media screen and (max-width:1200px) {
   .modal_content{
     width: 40%;
@@ -245,6 +260,7 @@ nav{
 
   .menuBar, .navClose{
     display: block;
+    cursor: pointer;
   }
 
   nav{
