--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ html, body {
   height: 100%;
 }
 
+a{
+  text-decoration: none;
+}
+
 #app{
   display: grid;
   grid-template-columns: 2fr 7fr;
@@ -31,6 +35,24 @@ nav{
   height: 100%;
   position: relative;
   left: 0;
+}
+
+.contact{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  border-top: 1px solid #343541;
+  padding: 10px 0;
+}
+
+.contact a{
+  display: flex;
+  align-items: center;
+}
+
+.item:hover{
+  background-color: #343541;
+  transition: .5s ease-in-out;
 }
 
 #createImage{
@@ -288,6 +310,3 @@ nav{
     width: 60%;
   }
 }
-
-
-
