--- a/style.css
+++ b/style.css
@@ -87,13 +87,23 @@ nav{
 
 .chatTextAndBtn{
   position: fixed;
-  bottom: 2%;
+  bottom: 5%;
   padding: 1px 8px;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 7px;
   width: 80%;
+}
+
+.bottomText{
+  position: absolute;
+  bottom: 0;
+  color: #fff;
+  bottom: -65%;
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
 
 .chatTextAndBtn textarea{
