--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@100;300;400;500;700;800;900&display=swap");
 
-*,
-*::before,
-*::after
+*
 {
   margin: 0;
   padding: 0;
@@ -191,6 +189,18 @@ nav{
   background-color: #40414F;
 }
 
+i{
+  color: #fff;
+  font-size: 24px;
+}
+
+.ph-heart{
+  color: red;
+}
+
+.ph-image, .ph-question{
+  font-size: 30px;
+}
 
 .modal{
   position: fixed;
