--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@ a {
   right: 0;
 }
 
+.right {
+  padding-bottom: 3rem;
+}
+
 nav {
   background-color: #202123;
   height: 100%;
@@ -85,20 +89,22 @@ nav {
 
 .chatTextAndBtn {
   position: fixed;
-  bottom: 5%;
-  padding: 1px 8px 1px 40px;
+  bottom: 0;
+  padding: 10px 0;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   gap: 7px;
   width: 80%;
+  background-color: #000000d2;
 }
 
 .bottomText {
-  position: absolute;
+  /* position: absolute; */
   bottom: 0;
   color: #fff;
-  bottom: -65%;
+  bottom: -30%;
   display: flex;
   align-items: center;
   gap: 5px;
@@ -298,9 +304,11 @@ i {
 
 .promptArea {
   display: flex;
+  justify-content: center;
   gap: 12px;
   align-items: flex-end;
   width: 100%;
+  margin-bottom: 1rem;
 }
 
 /* width */
